Removed PMD and Checkstyle.
SVN-Revision: 23372