@@ -81,7 +81,7 @@ public class LoadAnnotationDefinitionAction extends SecureAction
 {
 
 	private transient final Logger logger = Logger
-			.getCommonLogger(LoadAnnotationDefinitionAction.class);
+			.getCommonLogger( LoadAnnotationDefinitionAction.class );
 
 	/**
 	 * @param mapping - mapping
@@ -100,65 +100,63 @@ public class LoadAnnotationDefinitionAction extends SecureAction
 		// try
 		// {
 		final AnnotationForm annotationForm = (AnnotationForm) form;
-		annotationForm.setSelectedStaticEntityId(null);
+		annotationForm.setSelectedStaticEntityId( null );
 
 		// Added by Ravindra to disallow Non Super Admin users to add Local Extension
 		final SessionDataBean sessionDataBean = (SessionDataBean) request.getSession()
-				.getAttribute(Constants.SESSION_DATA);
+				.getAttribute( Constants.SESSION_DATA );
 		if (!sessionDataBean.isAdmin())
 		{
 			final ActionErrors errors = new ActionErrors();
-			final ActionError error = new ActionError("access.execute.action.denied");
-			errors.add(ActionErrors.GLOBAL_ERROR, error);
-			this.saveErrors(request, errors);
+			final ActionError error = new ActionError( "access.execute.action.denied" );
+			errors.add( ActionErrors.GLOBAL_ERROR, error );
+			this.saveErrors( request, errors );
 
-			return mapping.findForward(Constants.ACCESS_DENIED);
+			return mapping.findForward( Constants.ACCESS_DENIED );
 		}
 
 		//Ajax Code
-		if (request.getParameter(AnnotationConstants.AJAX_OPERATION) != null
-				&& !request.getParameter(AnnotationConstants.AJAX_OPERATION).equals("null"))
+		if (request.getParameter( AnnotationConstants.AJAX_OPERATION ) != null
+				&& !request.getParameter( AnnotationConstants.AJAX_OPERATION ).equals( "null" ))
 		{
 			//If operation not null -> ajaxOperation
-			this.processAjaxOperation(request, response);
+			this.processAjaxOperation( request, response );
 			//loadAnnotations(annotationForm);
 		}
-		else if (request.getParameter(WebUIManager.getOperationStatusParameterName()) != null)
+		else if (request.getParameter( WebUIManager.getOperationStatusParameterName() ) != null)
 		{
 			//Return from dynamic extensions
-			this.processResponseFromDynamicExtensions(request);
-			this.loadAnnotations(annotationForm, request);
-			request.setAttribute(Constants.OPERATION, Constants.LOAD_INTEGRATION_PAGE);
-			actionfwd = mapping.findForward(Constants.SUCCESS);
+			this.processResponseFromDynamicExtensions( request );
+			this.loadAnnotations( annotationForm, request );
+			request.setAttribute( Constants.OPERATION, Constants.LOAD_INTEGRATION_PAGE );
+			actionfwd = mapping.findForward( Constants.SUCCESS );
 		}
 		else
 		{
-			this.loadAnnotations(annotationForm, request);
-			actionfwd = mapping.findForward(Constants.SUCCESS);
+			this.loadAnnotations( annotationForm, request );
+			actionfwd = mapping.findForward( Constants.SUCCESS );
 		}
 
 		//this is while edit operation for conditions
-		if (request.getParameter(Constants.LINK) != null)
+		if (request.getParameter( Constants.LINK ) != null)
 		{
-			final String link = request.getParameter(Constants.LINK);
-			request.setAttribute(Constants.LINK, link);
+			final String link = request.getParameter( Constants.LINK );
+			request.setAttribute( Constants.LINK, link );
 
-			final String containerId = request.getParameter(Constants.CONTAINERID);
-			request
-					.setAttribute(Constants.CONTAINERID, request
-							.getParameter(Constants.CONTAINERID));
+			final String containerId = request.getParameter( Constants.CONTAINERID );
+			request.setAttribute( Constants.CONTAINERID, request
+					.getParameter( Constants.CONTAINERID ) );
 			if (containerId != null)
 			{
-				annotationForm.setSelectedStaticEntityId(request
-						.getParameter(Constants.SELECTED_ENTITY_ID));
+				annotationForm.setSelectedStaticEntityId( request
+						.getParameter( Constants.SELECTED_ENTITY_ID ) );
 
 				final EntityManagerInterface entityManager = EntityManager.getInstance();
-				final String containerCaption = entityManager.getContainerCaption(new Long(
-						containerId));
-				request.setAttribute(Constants.CONTAINER_NAME, containerCaption);
+				final String containerCaption = entityManager.getContainerCaption( Long.valueOf( containerId ));
+				request.setAttribute( Constants.CONTAINER_NAME, containerCaption );
 
-				this.getCPConditions(annotationForm, containerId, request);
-				actionfwd = mapping.findForward(Constants.SUCCESS);
+				this.getCPConditions( annotationForm, containerId, request );
+				actionfwd = mapping.findForward( Constants.SUCCESS );
 			}
 		}
 		/*   }
@@ -184,25 +182,25 @@ public class LoadAnnotationDefinitionAction extends SecureAction
 		{
 			final CatissueCoreCacheManager catissueCoreCacheManager = CatissueCoreCacheManager
 					.getInstance();
-			final List entitymapList = this.getEntityMapsForDE(new Long(containerId));
+			final List entitymapList = this.getEntityMapsForDE( Long.valueOf( containerId ) );
 			if (entitymapList != null && !entitymapList.isEmpty())
 			{
 				String[] whereColumnValue = null;
 				int i = 0;
 				EntityMap entityMap = new EntityMap();
-				entityMap = (EntityMap) entitymapList.get(0);
-				final Collection<FormContext> formContexts = AppUtility.getFormContexts(entityMap
-						.getId());
-				final Iterator<FormContext> formContextIterator = formContexts.iterator();
+				entityMap = (EntityMap) entitymapList.get( 0 );
+				final Collection < FormContext > formContexts = AppUtility
+						.getFormContexts( entityMap.getId() );
+				final Iterator < FormContext > formContextIterator = formContexts.iterator();
 				while (formContextIterator.hasNext())
 				{
 					final FormContext formContext = formContextIterator.next();
-					final Collection<EntityMapCondition> entityMapConditions = AppUtility
-							.getEntityMapConditions(formContext.getId());
-					if ((formContext.getNoOfEntries() == null || formContext.getNoOfEntries()
-							.equals(""))
-							&& (formContext.getStudyFormLabel() == null || formContext
-									.getStudyFormLabel().equals("")))
+					final Collection < EntityMapCondition > entityMapConditions = AppUtility
+							.getEntityMapConditions( formContext.getId() );
+					if (( formContext.getNoOfEntries() == null || formContext.getNoOfEntries()
+							.equals( "" ) )
+							&& ( formContext.getStudyFormLabel() == null || formContext
+									.getStudyFormLabel().equals( "" ) ))
 					{
 						if (entityMapConditions != null && !entityMapConditions.isEmpty())
 						{
@@ -216,8 +214,8 @@ public class LoadAnnotationDefinitionAction extends SecureAction
 										.next();
 								if (entityMapCondition.getTypeId().toString().equals(
 										catissueCoreCacheManager.getObjectFromCache(
-												AnnotationConstants.COLLECTION_PROTOCOL_ENTITY_ID)
-												.toString()))
+												AnnotationConstants.COLLECTION_PROTOCOL_ENTITY_ID )
+												.toString() ))
 								{
 									whereColumnValue[i++] = entityMapCondition.getStaticRecordId()
 											.toString();
@@ -230,7 +228,7 @@ public class LoadAnnotationDefinitionAction extends SecureAction
 				{
 					whereColumnValue = new String[]{Constants.ALL};
 				}
-				annotationForm.setConditionVal(whereColumnValue);
+				annotationForm.setConditionVal( whereColumnValue );
 			}
 		}
 	}
@@ -245,20 +243,20 @@ public class LoadAnnotationDefinitionAction extends SecureAction
 			throws DynamicExtensionsSystemException, DynamicExtensionsApplicationException,
 			ApplicationException
 	{
-		final String operationStatus = request.getParameter(WebUIManager
-				.getOperationStatusParameterName());
-		if ((operationStatus != null)
-				&& (operationStatus.trim().equals(WebUIManagerConstants.SUCCESS)))
+		final String operationStatus = request.getParameter( WebUIManager
+				.getOperationStatusParameterName() );
+		if (( operationStatus != null )
+				&& ( operationStatus.trim().equals( WebUIManagerConstants.SUCCESS ) ))
 		{
-			final String dynExtContainerId = request.getParameter(WebUIManager
-					.getContainerIdentifierParameterName());
-			final String staticEntityId = this.getStaticEntityIdForLinking(request);
+			final String dynExtContainerId = request.getParameter( WebUIManager
+					.getContainerIdentifierParameterName() );
+			final String staticEntityId = this.getStaticEntityIdForLinking( request );
 
-			final String[] staticRecordId = this.getStaticRecordIdForLinking(request);
+			final String[] staticRecordId = this.getStaticRecordIdForLinking( request );
 
-			this.logger.info("Need to link static entity [" + staticEntityId + "] to dyn ent ["
-					+ dynExtContainerId + "]");
-			this.linkEntities(request, staticEntityId, dynExtContainerId, staticRecordId);
+			this.logger.info( "Need to link static entity [" + staticEntityId + "] to dyn ent ["
+					+ dynExtContainerId + "]" );
+			this.linkEntities( request, staticEntityId, dynExtContainerId, staticRecordId );
 		}
 	}
 
@@ -280,60 +278,60 @@ public class LoadAnnotationDefinitionAction extends SecureAction
 		{
 			DAO dao = null;
 			final String deletedAssociationIds = request
-					.getParameter(WebUIManagerConstants.DELETED_ASSOCIATION_IDS);
+					.getParameter( WebUIManagerConstants.DELETED_ASSOCIATION_IDS );
 			String[] deletedAssociationIdArray = null;
 			if (deletedAssociationIds != null && deletedAssociationIds.length() > 0)
 			{
-				deletedAssociationIdArray = deletedAssociationIds.split("_");
+				deletedAssociationIdArray = deletedAssociationIds.split( "_" );
 			}
 			final DefaultBizLogic defaultBizLogic = BizLogicFactory.getDefaultBizLogic();
-			List<EntityMap> entityMapList = null;
+			List < EntityMap > entityMapList = null;
 			try
 			{
-				entityMapList = defaultBizLogic.retrieve(EntityMap.class.getName(), "containerId",
-						Long.parseLong(dynExtContainerId));
-				if (entityMapList == null || entityMapList.size() == 0)
+				entityMapList = defaultBizLogic.retrieve( EntityMap.class.getName(), "containerId",
+						Long.parseLong( dynExtContainerId ) );
+				if (entityMapList == null || entityMapList.isEmpty())
 				{//If entity map is not present then Add case
-					final EntityMap entityMap = this.getEntityMap(request, staticEntityId,
-							dynExtContainerId, staticRecordIds);
+					final EntityMap entityMap = this.getEntityMap( request, staticEntityId,
+							dynExtContainerId, staticRecordIds );
 					final AnnotationBizLogic annotationBizLogic = new AnnotationBizLogic();
-					annotationBizLogic.insertEntityMap(entityMap);
+					annotationBizLogic.insertEntityMap( entityMap );
 				}
 				else
 				{//if entity map is present then Edit case
 					//Getting the static entity id
 
-					final EntityMap baseLevelEntityMap = entityMapList.get(0);
+					final EntityMap baseLevelEntityMap = entityMapList.get( 0 );
 					staticEntityId = baseLevelEntityMap.getStaticEntityId().toString();
 
 					//Retrieving the container
 					try
 					{
 						final String appName = DynamicExtensionDAO.getInstance().getAppName();
-						dao = DAOConfigFactory.getInstance().getDAOFactory(appName).getDAO();
-						dao.openSession(null);
+						dao = DAOConfigFactory.getInstance().getDAOFactory( appName ).getDAO();
+						dao.openSession( null );
 
 					}
 					catch (final HibernateException excep)
 					{
-						this.logger.error(excep.getMessage(), excep);
-						excep.printStackTrace();
-						throw new ApplicationException(ErrorKey.getErrorKey("hibernate.exception"),
-								excep, "LoadAnnotationDefinitionAction.java");
+						this.logger.error( excep.getMessage(), excep );
+						throw new ApplicationException( ErrorKey
+								.getErrorKey( "hibernate.exception" ) , excep ,
+								"LoadAnnotationDefinitionAction.java" );
 					}
 
 					ContainerInterface dynamicContainer = null;
 					EntityInterface staticEntity = null;
 					try
 					{
-						staticEntity = (EntityInterface) dao.retrieveById(Entity.class.getName(),
-								new Long(staticEntityId));
-						dynamicContainer = (Container) dao.retrieveById(Container.class.getName(),
-								new Long(dynExtContainerId));
+						staticEntity = (EntityInterface) dao.retrieveById( Entity.class.getName(),
+								Long.valueOf( staticEntityId ) );
+						dynamicContainer = (Container) dao.retrieveById( Container.class.getName(),
+								Long.valueOf( dynExtContainerId ) );
 
 						final AssociationInterface association = edu.wustl.catissuecore.bizlogic.AnnotationUtil
-								.getAssociationForEntity(staticEntity, dynamicContainer
-										.getAbstractEntity());
+								.getAssociationForEntity( staticEntity, dynamicContainer
+										.getAbstractEntity() );
 						//	Get entitygroup that is used by caB2B for path finder purpose.
 						//				Commented this line since performance issue for Bug 6433
 						//EntityGroupInterface entityGroupInterface = edu.wustl.cab2b.common.util.Utility.getEntityGroup(staticEntity);
@@ -343,22 +341,21 @@ public class LoadAnnotationDefinitionAction extends SecureAction
 						//				staticEntity = EntityManager.getInstance().persistEntityMetadataForAnnotation(
 						//						staticEntity, true, false, association);
 
-						final Set<PathObject> processedPathList = new HashSet<PathObject>();
+						final Set < PathObject > processedPathList = new HashSet < PathObject >();
 						//Adding paths from second level as first level paths between static entity and top level dynamic entity have already been added
-						this.addQueryPathsForEntityHierarchy((EntityInterface) dynamicContainer
+						this.addQueryPathsForEntityHierarchy( (EntityInterface) dynamicContainer
 								.getAbstractEntity(), staticEntity, association.getId(),
-								staticEntity.getId(), processedPathList);
+								staticEntity.getId(), processedPathList );
 
-						edu.wustl.catissuecore.bizlogic.AnnotationUtil.addEntitiesToCache(false,
+						edu.wustl.catissuecore.bizlogic.AnnotationUtil.addEntitiesToCache( false,
 								(EntityInterface) dynamicContainer.getAbstractEntity(),
-								staticEntity);
+								staticEntity );
 					}
 					catch (final BizLogicException excep)
 					{
-						this.logger.error(excep.getMessage(), excep);
-						excep.printStackTrace();
-						throw AppUtility.getApplicationException(excep, excep.getErrorKeyName(),
-								excep.getMsgValues());
+						this.logger.error( excep.getMessage(), excep );
+						throw AppUtility.getApplicationException( excep, excep.getErrorKeyName(),
+								excep.getMsgValues() );
 					}
 					finally
 					{
@@ -368,22 +365,20 @@ public class LoadAnnotationDefinitionAction extends SecureAction
 			}
 			catch (final NumberFormatException excep)
 			{
-				this.logger.error(excep.getMessage(), excep);
-				excep.printStackTrace();
-				throw AppUtility.getApplicationException(excep, "number.format.exp",
-						"LoadAnnotationDefinitionAction.java");
+				this.logger.error( excep.getMessage(), excep );
+				throw AppUtility.getApplicationException( excep, "number.format.exp",
+						"LoadAnnotationDefinitionAction.java" );
 			}
 			catch (final DAOException excep)
 			{
-				this.logger.error(excep.getMessage(), excep);
-				excep.printStackTrace();
-				throw AppUtility.getApplicationException(excep, excep.getErrorKeyName(), excep
-						.getMsgValues());
+				this.logger.error( excep.getMessage(), excep );
+				throw AppUtility.getApplicationException( excep, excep.getErrorKeyName(), excep
+						.getMsgValues() );
 			}
 			finally
 			{
 				//Added by Rajesh to remove deleted associations from query tables.
-				this.removeQueryPathsForEntityHierarchy(deletedAssociationIdArray);
+				this.removeQueryPathsForEntityHierarchy( deletedAssociationIdArray );
 			}
 		}
 	}
@@ -404,10 +399,10 @@ public class LoadAnnotationDefinitionAction extends SecureAction
 			try
 			{
 				final String deleteQuery = "delete from intra_model_association where de_association_id = ?";
-				statement = jdbcDAO.getPreparedStatement(deleteQuery);
+				statement = jdbcDAO.getPreparedStatement( deleteQuery );
 				for (final String id : deletedAssociationIdArray)
 				{
-					statement.setLong(1, new Long(id));
+					statement.setLong( 1, Long.valueOf( id ) );
 					statement.executeUpdate();
 					statement.clearParameters();
 				}
@@ -415,23 +410,21 @@ public class LoadAnnotationDefinitionAction extends SecureAction
 			}
 			catch (final SQLException excep)
 			{
-				this.logger.error(excep.getMessage(), excep);
-				excep.printStackTrace() ;
-				throw new ApplicationException(ErrorKey.getErrorKey("SQL.exp"), excep,
-						"LoadAnnotationDefinitionAction.java");
+				this.logger.error( excep.getMessage(), excep );
+				throw new ApplicationException( ErrorKey.getErrorKey( "SQL.exp" ) , excep ,
+						"LoadAnnotationDefinitionAction.java" );
 			}
 			finally
 			{
-				AppUtility.closeJDBCSession(jdbcDAO);
+				AppUtility.closeJDBCSession( jdbcDAO );
 				try
 				{
 					statement.close();
 				}
 				catch (final SQLException e)
 				{
-					this.logger.error(e.getMessage(),e);
+					this.logger.error( e.getMessage(), e );
 					// TODO Auto-generated catch block
-					e.printStackTrace();
 				}
 			}
 		}
@@ -449,43 +442,43 @@ public class LoadAnnotationDefinitionAction extends SecureAction
 	 */
 	private void addQueryPathsForEntityHierarchy(EntityInterface dynamicEntity,
 			EntityInterface staticEntity, Long associationId, Long staticEntityId,
-			Set<PathObject> processedPathList) throws DynamicExtensionsSystemException,
+			Set < PathObject > processedPathList) throws DynamicExtensionsSystemException,
 			DynamicExtensionsApplicationException, BizLogicException
 	{
 		final PathObject pathObject = new PathObject();
-		pathObject.setSourceEntity(staticEntity);
-		pathObject.setTargetEntity(dynamicEntity);
+		pathObject.setSourceEntity( staticEntity );
+		pathObject.setTargetEntity( dynamicEntity );
 
-		if (processedPathList.contains(pathObject))
+		if (processedPathList.contains( pathObject ))
 		{
 			return;
 		}
 		else
 		{
-			processedPathList.add(pathObject);
+			processedPathList.add( pathObject );
 		}
 
-		final Long start = new Long(System.currentTimeMillis());
-		final boolean ispathAdded = this.isPathAdded(staticEntity.getId(), dynamicEntity.getId());
-		if (!ispathAdded)
+		//final Long start = Long.valueOf( System.currentTimeMillis() );
+		final boolean ispathAdded = this.isPathAdded( staticEntity.getId(), dynamicEntity.getId() );
+		if (!ispathAdded && dynamicEntity.getId() != null)
 		{
-			if (dynamicEntity.getId() != null)
-			{
-				edu.wustl.catissuecore.bizlogic.AnnotationUtil.addPathsForQuery(staticEntity
-						.getId(), dynamicEntity, staticEntityId, associationId);
-			}
+			//if (dynamicEntity.getId() != null)
+			//{
+				edu.wustl.catissuecore.bizlogic.AnnotationUtil.addPathsForQuery( staticEntity
+						.getId(), dynamicEntity, staticEntityId, associationId );
+			//}
 		}
-		final Collection<AssociationInterface> associationCollection = dynamicEntity
+		final Collection < AssociationInterface > associationCollection = dynamicEntity
 				.getAllAssociations();
 		for (final AssociationInterface association : associationCollection)
 		{
-			System.out.println("PERSISTING PATH");
-			this.addQueryPathsForEntityHierarchy(association.getTargetEntity(), dynamicEntity,
-					association.getId(), staticEntityId, processedPathList);
+			//System.out.println( "PERSISTING PATH" );
+			this.addQueryPathsForEntityHierarchy( association.getTargetEntity(), dynamicEntity,
+					association.getId(), staticEntityId, processedPathList );
 		}
-		final Long end = new Long(System.currentTimeMillis());
-		System.out.println("Time required to add complete paths is" + (end - start) / 1000
-				+ "seconds");
+		//final Long end = Long.valueOf( System.currentTimeMillis() );
+		/*System.out.println( "Time required to add complete paths is" + ( end - start ) / 1000
+				+ "seconds" );*/
 	}
 
 	/**
@@ -504,10 +497,10 @@ public class LoadAnnotationDefinitionAction extends SecureAction
 		{
 			jdbcDAO = AppUtility.openJDBCSession();
 			final String checkForPathQuery = "select path_id from path where FIRST_ENTITY_ID = ? and LAST_ENTITY_ID = ?";
-			preparedStatement = jdbcDAO.getPreparedStatement(checkForPathQuery);
-			preparedStatement.setLong(1, staticEntityId);
+			preparedStatement = jdbcDAO.getPreparedStatement( checkForPathQuery );
+			preparedStatement.setLong( 1, staticEntityId );
 
-			preparedStatement.setLong(2, dynamicEntityId);
+			preparedStatement.setLong( 2, dynamicEntityId );
 			resultSet = preparedStatement.executeQuery();
 			if (resultSet != null)
 			{
@@ -518,30 +511,27 @@ public class LoadAnnotationDefinitionAction extends SecureAction
 				}
 			}
 
-			System.out.println("ispathAdded  ----- " + ispathAdded);
+			//System.out.println( "ispathAdded  ----- " + ispathAdded );
 
 		}
 		catch (final SQLException e)
 		{
-			this.logger.error(e.getMessage(), e);
-			e.printStackTrace();
+			this.logger.error( e.getMessage(), e );
 		}
 		catch (final ApplicationException e)
 		{
-			this.logger.error(e.getMessage(), e);
-			e.printStackTrace();
+			this.logger.error( e.getMessage(), e );
 		}
 		finally
 		{
 			try
 			{
-				jdbcDAO.closeStatement(resultSet);
-				AppUtility.closeJDBCSession(jdbcDAO);
+				jdbcDAO.closeStatement( resultSet );
+				AppUtility.closeJDBCSession( jdbcDAO );
 			}
 			catch (final ApplicationException e)
 			{
-				this.logger.error(e.getLogMessage(), e);
-				e.printStackTrace();
+				this.logger.error( e.getLogMessage(), e );
 			}
 		}
 		return ispathAdded;
@@ -561,24 +551,24 @@ public class LoadAnnotationDefinitionAction extends SecureAction
 		Collection formContextCollection = new HashSet();
 
 		final EntityMap entityMapObj = new EntityMap();
-		entityMapObj.setContainerId(CommonUtilities.toLong(dynExtContainerId));
-		entityMapObj.setStaticEntityId(CommonUtilities.toLong(staticEntityId));
+		entityMapObj.setContainerId( CommonUtilities.toLong( dynExtContainerId ) );
+		entityMapObj.setStaticEntityId( CommonUtilities.toLong( staticEntityId ) );
 		final SessionDataBean sessionDataBean = (SessionDataBean) request.getSession()
-				.getAttribute(Constants.SESSION_DATA);
+				.getAttribute( Constants.SESSION_DATA );
 		if (sessionDataBean != null)
 		{
-			entityMapObj.setCreatedBy(sessionDataBean.getLastName() + ", "
-					+ sessionDataBean.getFirstName());
-			entityMapObj.setCreatedDate(new Date());
+			entityMapObj.setCreatedBy( sessionDataBean.getLastName() + ", "
+					+ sessionDataBean.getFirstName() );
+			entityMapObj.setCreatedDate( new Date() );
 		}
-		entityMapObj.setLinkStatus(AnnotationConstants.STATUS_ATTACHED);
+		entityMapObj.setLinkStatus( AnnotationConstants.STATUS_ATTACHED );
 
 		if (conditions != null)
 		{
-			formContextCollection = util.getFormContextCollection(conditions, entityMapObj);
+			formContextCollection = util.getFormContextCollection( conditions, entityMapObj );
 		}
 
-		entityMapObj.setFormContextCollection(formContextCollection);
+		entityMapObj.setFormContextCollection( formContextCollection );
 		//    entityMapObj.setEntityMapConditionCollection(entityMapConditionCollection);
 
 		return entityMapObj;
@@ -591,8 +581,8 @@ public class LoadAnnotationDefinitionAction extends SecureAction
 	private String getStaticEntityIdForLinking(HttpServletRequest request)
 	{
 		final String staticEntityId = (String) request.getSession().getAttribute(
-				AnnotationConstants.SELECTED_STATIC_ENTITYID);
-		request.getSession().removeAttribute(AnnotationConstants.SELECTED_STATIC_ENTITYID);
+				AnnotationConstants.SELECTED_STATIC_ENTITYID );
+		request.getSession().removeAttribute( AnnotationConstants.SELECTED_STATIC_ENTITYID );
 
 		return staticEntityId;
 	}
@@ -604,8 +594,8 @@ public class LoadAnnotationDefinitionAction extends SecureAction
 	private String[] getStaticRecordIdForLinking(HttpServletRequest request)
 	{
 		final String[] staticRecordId = (String[]) request.getSession().getAttribute(
-				AnnotationConstants.SELECTED_STATIC_RECORDID);
-		request.getSession().removeAttribute(AnnotationConstants.SELECTED_STATIC_RECORDID);
+				AnnotationConstants.SELECTED_STATIC_RECORDID );
+		request.getSession().removeAttribute( AnnotationConstants.SELECTED_STATIC_RECORDID );
 		return staticRecordId;
 	}
 
@@ -621,14 +611,14 @@ public class LoadAnnotationDefinitionAction extends SecureAction
 			throws IOException, DynamicExtensionsSystemException,
 			DynamicExtensionsApplicationException, DAOException
 	{
-		final String operation = request.getParameter(AnnotationConstants.AJAX_OPERATION);
-		if ((operation != null)
-				&& (operation.equalsIgnoreCase(AnnotationConstants.AJAX_OPERATION_SELECT_GROUP)))
+		final String operation = request.getParameter( AnnotationConstants.AJAX_OPERATION );
+		if (( operation != null )
+				&& ( operation.equalsIgnoreCase( AnnotationConstants.AJAX_OPERATION_SELECT_GROUP ) ))
 		{
 			final String groupId = request
-					.getParameter(AnnotationConstants.AJAX_OPERATION_SELECTED_GROUPID);
-			this.getEntitiesForGroupAsXML(groupId, request);
-			this.getResponseString(request, response);
+					.getParameter( AnnotationConstants.AJAX_OPERATION_SELECTED_GROUPID );
+			this.getEntitiesForGroupAsXML( groupId, request );
+			this.getResponseString( request, response );
 
 			// sendResponse(entitiesXML, response);
 		}
@@ -644,7 +634,7 @@ public class LoadAnnotationDefinitionAction extends SecureAction
 			throws IOException
 	{
 		final List entityList = (List) request.getSession().getAttribute(
-				Constants.SPREADSHEET_DATA_ENTITY);
+				Constants.SPREADSHEET_DATA_ENTITY );
 		final Iterator entityIt = entityList.iterator();
 		//String responseString="";
 		final StringBuilder responseString = new StringBuilder();
@@ -655,16 +645,16 @@ public class LoadAnnotationDefinitionAction extends SecureAction
 			{
 				for (int i = 0; i < innerList.size(); i++)
 				{
-					responseString.append(innerList.get(i));
-					if ((i + 1) < innerList.size())
+					responseString.append( innerList.get( i ) );
+					if (( i + 1 ) < innerList.size())
 					{
-						responseString.append(",");
+						responseString.append( "," );
 					}
 				}
 			}
-			responseString.append("@");
+			responseString.append( "@" );
 		}
-		this.sendResponse(responseString.toString(), response);
+		this.sendResponse( responseString.toString(), response );
 	}
 
 	/**
@@ -708,31 +698,31 @@ public class LoadAnnotationDefinitionAction extends SecureAction
 		final List dataList = new ArrayList();
 
 		final StringBuffer entitiesXML = new StringBuffer();
-		entitiesXML.append("<?xml version='1.0' encoding='UTF-8'?>");
+		entitiesXML.append( "<?xml version='1.0' encoding='UTF-8'?>" );
 		if (groupId != null)
 		{
-			final Long lGroupId = new Long(groupId);
-			final Collection<NameValueBean> entityContainerCollection = EntityManager.getInstance()
-					.getMainContainer(lGroupId);
+			final Long lGroupId = Long.valueOf( groupId );
+			final Collection < NameValueBean > entityContainerCollection = EntityManager
+					.getInstance().getMainContainer( lGroupId );
 
 			if (entityContainerCollection != null)
 			{
-				entitiesXML.append("<rows>");
-				final Iterator<NameValueBean> containerCollnIter = entityContainerCollection
+				entitiesXML.append( "<rows>" );
+				final Iterator < NameValueBean > containerCollnIter = entityContainerCollection
 						.iterator();
 				int entityIndex = 1;
 				while (containerCollnIter.hasNext())
 				{
 					final List innerList = new ArrayList();
 					final NameValueBean container = containerCollnIter.next();
-					entitiesXML.append(this.getEntityXMLString(container, entityIndex, innerList,
-							request));
+					entitiesXML.append( this.getEntityXMLString( container, entityIndex, innerList,
+							request ) );
 					entityIndex++;
-					dataList.add(innerList);
+					dataList.add( innerList );
 				}
-				entitiesXML.append("</rows>");
+				entitiesXML.append( "</rows>" );
 			}
-			request.getSession().setAttribute(Constants.SPREADSHEET_DATA_ENTITY, dataList);
+			request.getSession().setAttribute( Constants.SPREADSHEET_DATA_ENTITY, dataList );
 
 		}
 		return entitiesXML.toString();
@@ -756,24 +746,24 @@ public class LoadAnnotationDefinitionAction extends SecureAction
 		if (container != null)
 		{
 			int index = 1;
-			String editDynExtEntityURL = this.getDynamicExtentionsEditURL(new Long(container
-					.getValue()));
+			String editDynExtEntityURL = this.getDynamicExtentionsEditURL( Long.valueOf( container
+					.getValue() ) );
 
-			final List<EntityMap> entityMapList = this.getEntityMapsForDE(new Long(container
-					.getValue()));
+			final List < EntityMap > entityMapList = this.getEntityMapsForDE( Long.valueOf( container
+					.getValue() ) );
 			if (entityMapList != null)
 			{
-				final Iterator<EntityMap> entityMapIterator = entityMapList.iterator();
+				final Iterator < EntityMap > entityMapIterator = entityMapList.iterator();
 				while (entityMapIterator.hasNext())
 				{
 					final EntityMap entityMapObj = entityMapIterator.next();
 					final String editDynExtCondnURL = this.getDynamicExtentionsEditCondnURL(
-							new Long(container.getValue()), entityMapObj.getStaticEntityId());
+							Long.valueOf( container.getValue() ), entityMapObj.getStaticEntityId() );					
 					editDynExtEntityURL = editDynExtEntityURL + "&staticEntityId="
 							+ entityMapObj.getStaticEntityId();
-					entityXML.append(this.getXMLForEntityMap(container.getName(), entityMapObj,
+					entityXML.append( this.getXMLForEntityMap( container.getName(), entityMapObj,
 							entityIndex + index, editDynExtEntityURL, editDynExtCondnURL,
-							innerList, request));
+							innerList, request ) );
 					index++;
 				}
 			}
@@ -799,48 +789,59 @@ public class LoadAnnotationDefinitionAction extends SecureAction
 			DynamicExtensionsApplicationException
 	{
 		final StringBuffer entityMapXML = new StringBuffer();
-		entityMapXML.append("<row id='" + rowId + "'>");
+		entityMapXML.append( "<row id='" + rowId + "'>" );
 		//entityMapXML.append("<cell>0</cell>");
 		// innerList.add(rowId);
-		entityMapXML.append("<cell>" + containercaption + "^" + dynExtentionsEditEntityURL
-				+ "</cell>");
-		String url = this.makeURL(containercaption, dynExtentionsEditEntityURL);
-		innerList.add(url);
+		entityMapXML.append( AnnotationConstants.CELL_START );
+		entityMapXML.append( containercaption ); 
+		entityMapXML.append( '^' ); 
+		entityMapXML.append( dynExtentionsEditEntityURL );
+		entityMapXML.append( AnnotationConstants.CELL_END );
+		String url = this.makeURL( containercaption, dynExtentionsEditEntityURL );
+		innerList.add( url );
 		if (entityMapObj != null)
 		{
-			final String staticEntityName = this.getEntityName(entityMapObj.getStaticEntityId(),
-					request);
-			entityMapXML.append("<cell>" + staticEntityName + "</cell>");
-			innerList.add(staticEntityName);
-			entityMapXML.append("<cell>"
-					+ CommonUtilities.parseDateToString(entityMapObj.getCreatedDate(),
-							CommonServiceLocator.getInstance().getDatePattern()) + "</cell>");
-			innerList.add(CommonUtilities.parseDateToString(entityMapObj.getCreatedDate(),
-					CommonServiceLocator.getInstance().getDatePattern()));
-			entityMapXML.append("<cell>" + entityMapObj.getCreatedBy() + "</cell>");
+			final String staticEntityName = this.getEntityName( entityMapObj.getStaticEntityId(),
+					request );
+			entityMapXML.append( AnnotationConstants.CELL_START );
+			entityMapXML.append( staticEntityName );
+			entityMapXML.append( AnnotationConstants.CELL_END );
+			innerList.add( staticEntityName );
+			entityMapXML.append( AnnotationConstants.CELL_START );
+			entityMapXML.append( CommonUtilities.parseDateToString( entityMapObj.getCreatedDate(),
+					CommonServiceLocator.getInstance().getDatePattern() )); 
+			entityMapXML.append( AnnotationConstants.CELL_END );
+			innerList.add( CommonUtilities.parseDateToString( entityMapObj.getCreatedDate(),
+					CommonServiceLocator.getInstance().getDatePattern() ) );
+			entityMapXML.append( AnnotationConstants.CELL_START );
+			entityMapXML.append( entityMapObj.getCreatedBy() );
+			entityMapXML.append( AnnotationConstants.CELL_END );
 			String name = entityMapObj.getCreatedBy();
 			if (name == null)
 			{
 				name = ",";
 			}
-			if (name != null && name.contains(","))
+			if (name != null && name.contains( "," ))
 			{
-				name = name.replace(',', ' ');
-				innerList.add(name);
+				name = name.replace( ',', ' ' );
+				innerList.add( name );
 			}
 			else
 			{
-				innerList.add(entityMapObj.getCreatedBy());
-				/* entityMapXML.append("<cell>" + entityMapObj.getLinkStatus()
-				 + "</cell>");*/
+				innerList.add( entityMapObj.getCreatedBy() );
+				/* entityMapXML.append(AnnotationConstants.CELL_START + entityMapObj.getLinkStatus()
+				 + AnnotationConstants.CELL_END);*/
 			}
 		}
-		entityMapXML.append("<cell>" + edu.wustl.catissuecore.util.global.Constants.EDIT_CONDN
-				+ "^" + editDynExtCondnURL + "</cell>");
-		url = this.makeURL(edu.wustl.catissuecore.util.global.Constants.EDIT_CONDN,
-				editDynExtCondnURL);
-		innerList.add(url);
-		entityMapXML.append("</row>");
+		entityMapXML.append( AnnotationConstants.CELL_START ); 
+		entityMapXML.append( edu.wustl.catissuecore.util.global.Constants.EDIT_CONDN );
+		entityMapXML.append( '^' ); 
+		entityMapXML.append( editDynExtCondnURL );
+		entityMapXML.append( AnnotationConstants.CELL_END );
+		url = this.makeURL( edu.wustl.catissuecore.util.global.Constants.EDIT_CONDN,
+				editDynExtCondnURL );
+		innerList.add( url );
+		entityMapXML.append( "</row>" );
 		return entityMapXML;
 	}
 
@@ -860,13 +861,13 @@ public class LoadAnnotationDefinitionAction extends SecureAction
 	 * @param dynEntityContainerId - dynEntityContainerId
 	 * @return List of EntityMap
 	 */
-	private List<EntityMap> getEntityMapsForDE(Long dynEntityContainerId)
+	private List < EntityMap > getEntityMapsForDE(Long dynEntityContainerId)
 	{
-		List<EntityMap> entityMapList = null;
+		List < EntityMap > entityMapList = null;
 		if (dynEntityContainerId != null)
 		{
 			final AnnotationBizLogic annotationBizLogic = new AnnotationBizLogic();
-			entityMapList = annotationBizLogic.getListOfStaticEntities(dynEntityContainerId);
+			entityMapList = annotationBizLogic.getListOfStaticEntities( dynEntityContainerId );
 			/*List staticEntityIdsList = annotationBizLogic.getListOfStaticEntities(dynEntityContainerId);
 			 entityMapList = getEntityMapList(staticEntityIdsList);*/
 		}
@@ -908,14 +909,14 @@ public class LoadAnnotationDefinitionAction extends SecureAction
 		if (entityId != null)
 		{
 			final List staticEntityList = (List) request.getSession().getAttribute(
-					AnnotationConstants.STATIC_ENTITY_LIST);
+					AnnotationConstants.STATIC_ENTITY_LIST );
 			if (staticEntityList != null && !staticEntityList.isEmpty())
 			{
 				final Iterator listIterator = staticEntityList.iterator();
 				while (listIterator.hasNext())
 				{
 					final NameValueBean nameValueBean = (NameValueBean) listIterator.next();
-					if (nameValueBean.getValue().equalsIgnoreCase(entityId.toString()))
+					if (nameValueBean.getValue().equalsIgnoreCase( entityId.toString() ))
 					{
 						entityName = nameValueBean.getName();
 					}
@@ -934,7 +935,7 @@ public class LoadAnnotationDefinitionAction extends SecureAction
 	private void sendResponse(String responseXML, HttpServletResponse response) throws IOException
 	{
 		final PrintWriter out = response.getWriter();
-		out.write(responseXML);
+		out.write( responseXML );
 
 		// out.print(responseXML);
 	}
@@ -953,25 +954,25 @@ public class LoadAnnotationDefinitionAction extends SecureAction
 		if (annotationForm != null)
 		{
 			//load list of system entities
-			if (request.getSession().getAttribute(AnnotationConstants.STATIC_ENTITY_LIST) == null)
+			if (request.getSession().getAttribute( AnnotationConstants.STATIC_ENTITY_LIST ) == null)
 			{
 				systemEntitiesList = AnnotationUtil.getSystemEntityList();
-				request.getSession().setAttribute(AnnotationConstants.STATIC_ENTITY_LIST,
-						systemEntitiesList);
+				request.getSession().setAttribute( AnnotationConstants.STATIC_ENTITY_LIST,
+						systemEntitiesList );
 			}
 			else
 			{
 				systemEntitiesList = (List) request.getSession().getAttribute(
-						AnnotationConstants.STATIC_ENTITY_LIST);
+						AnnotationConstants.STATIC_ENTITY_LIST );
 			}
 
-			annotationForm.setSystemEntitiesList(systemEntitiesList);
+			annotationForm.setSystemEntitiesList( systemEntitiesList );
 			//Load list of groups
-			this.loadGroupList(annotationForm, request);
+			this.loadGroupList( annotationForm, request );
 
 			final List conditionalInstancesList = this.populateConditionalInstanceList();
-			annotationForm.setConditionalInstancesList(conditionalInstancesList);
-			annotationForm.setConditionVal(new String[]{Constants.ALL});
+			annotationForm.setConditionalInstancesList( conditionalInstancesList );
+			annotationForm.setConditionVal( new String[]{Constants.ALL} );
 
 		}
 	}
@@ -987,17 +988,16 @@ public class LoadAnnotationDefinitionAction extends SecureAction
 		{
 			final DefaultBizLogic bizLogic = new DefaultBizLogic();
 			final String[] displayNames = {"shortTitle", "title"};
-			conditionalInstancesList = bizLogic.getList(CollectionProtocol.class.getName(),
-					displayNames, "id", true);
-			conditionalInstancesList = this.modifyName(conditionalInstancesList);
-			conditionalInstancesList.remove(0);
-			conditionalInstancesList.add(0, new NameValueBean(
-					edu.wustl.catissuecore.util.global.Constants.HOLDS_ANY, Constants.ALL));
+			conditionalInstancesList = bizLogic.getList( CollectionProtocol.class.getName(),
+					displayNames, "id", true );
+			conditionalInstancesList = this.modifyName( conditionalInstancesList );
+			conditionalInstancesList.remove( 0 );
+			conditionalInstancesList.add( 0, new NameValueBean(
+					edu.wustl.catissuecore.util.global.Constants.HOLDS_ANY , Constants.ALL ) );
 		}
 		catch (final BizLogicException e)
 		{
-			this.logger.error(e.getMessage(), e);
-			e.printStackTrace() ;
+			this.logger.error( e.getMessage(), e );
 		}
 		return conditionalInstancesList;
 	}
@@ -1013,15 +1013,15 @@ public class LoadAnnotationDefinitionAction extends SecureAction
 		{
 
 			final NameValueBean bean = (NameValueBean) x;
-			final String[] split = bean.getName().split(",");
+			final String[] split = bean.getName().split( "," );
 			if (split != null && split.length > 1)
 			{
 				String name;
 				name = split[0] + " (" + split[1].trim() + ")";
-				bean.setName(name);
+				bean.setName( name );
 
 			}
-			list.add(bean);
+			list.add( bean );
 
 		}
 		return list;
@@ -1037,9 +1037,9 @@ public class LoadAnnotationDefinitionAction extends SecureAction
 			throws DynamicExtensionsSystemException, DynamicExtensionsApplicationException
 	{
 		//List of groups
-		final Collection<NameValueBean> annotationGroupsList = this.getAnnotationGroups();
-		final String groupsXML = this.getGroupsXML(annotationGroupsList, request);
-		annotationForm.setAnnotationGroupsXML(groupsXML);
+		final Collection < NameValueBean > annotationGroupsList = this.getAnnotationGroups();
+		final String groupsXML = this.getGroupsXML( annotationGroupsList, request );
+		annotationForm.setAnnotationGroupsXML( groupsXML );
 	}
 
 	/**
@@ -1047,35 +1047,35 @@ public class LoadAnnotationDefinitionAction extends SecureAction
 	 * @param request - HttpServletRequest object
 	 * @return string
 	 */
-	private String getGroupsXML(Collection<NameValueBean> annotationGroupsList,
+	private String getGroupsXML(Collection < NameValueBean > annotationGroupsList,
 			HttpServletRequest request)
 	{
 		final StringBuffer groupsXML = new StringBuffer();
 		final List dataList = new ArrayList();
 		if (annotationGroupsList != null)
 		{
-			groupsXML.append("<?xml version='1.0' encoding='UTF-8'?>");
-			groupsXML.append("<rows>");
+			groupsXML.append( "<?xml version='1.0' encoding='UTF-8'?>" );
+			groupsXML.append( "<rows>" );
 			NameValueBean groupBean = null;
-			final Iterator<NameValueBean> iterator = annotationGroupsList.iterator();
+			final Iterator < NameValueBean > iterator = annotationGroupsList.iterator();
 			while (iterator.hasNext())
 			{
 				groupBean = iterator.next();
 				final List innerList = new ArrayList();
 				if (groupBean != null)
 				{
-					groupsXML.append("<row id='" + groupBean.getValue() + "' >");
+					groupsXML.append( "<row id='" + groupBean.getValue() + "' >" );
 					//groupsXML.append("<cell>0</cell>");
-					groupsXML.append("<cell>" + groupBean.getName() + "</cell>");
-					innerList.add(groupBean.getValue());
-					innerList.add(groupBean.getName());
-					groupsXML.append("</row>");
-					dataList.add(innerList);
+					groupsXML.append( AnnotationConstants.CELL_START + groupBean.getName() + AnnotationConstants.CELL_END );
+					innerList.add( groupBean.getValue() );
+					innerList.add( groupBean.getName() );
+					groupsXML.append( "</row>" );
+					dataList.add( innerList );
 				}
 			}
-			groupsXML.append("</rows>");
+			groupsXML.append( "</rows>" );
 		}
-		request.setAttribute(Constants.SPREADSHEET_DATA_GROUP, dataList);
+		request.setAttribute( Constants.SPREADSHEET_DATA_GROUP, dataList );
 		return groupsXML.toString();
 	}
 
@@ -1084,11 +1084,11 @@ public class LoadAnnotationDefinitionAction extends SecureAction
 	 * @throws DynamicExtensionsApplicationException - DynamicExtensionsApplicationException
 	 * @throws DynamicExtensionsSystemException - DynamicExtensionsSystemException
 	 */
-	private Collection<NameValueBean> getAnnotationGroups()
+	private Collection < NameValueBean > getAnnotationGroups()
 			throws DynamicExtensionsSystemException, DynamicExtensionsApplicationException
 	{
 		final EntityManagerInterface entityManager = EntityManager.getInstance();
-		final Collection<NameValueBean> entityGroups = entityManager.getAllEntityGroupBeans();
+		final Collection < NameValueBean > entityGroups = entityManager.getAllEntityGroupBeans();
 		return entityGroups;
 	}
 
@@ -1110,7 +1110,7 @@ public class LoadAnnotationDefinitionAction extends SecureAction
 	protected SessionDataBean getSessionData(HttpServletRequest request)
 	{
 
-		return super.getSessionData(request);
+		return super.getSessionData( request );
 
 	}
 
